# zx16-simulator

./: .gitignore  CMakeLists.txt  README.md  Test_driver.cpp  Tests.cpp  create_bin.py  create_test_bins  create_test_bins.cpp  main.cpp  package-lock.json  package.json  run_tests.sh  server.cjs  test_simulator.js  z16sim  z16sim.cpp  z16sim.h
Test Cases/: Testcase10.asm  Testcase11.asm  Testcase4.asm  Testcase5.asm  Testcase6.asm  Testcase8.asm  Testcase9.asm  testcase 12 .asm  testcase 13.asm  testcase1.asm  testcase2.asm  testcase3.asm
Tests/: TC-ZX16-01.actual  TC-ZX16-01.expected  TC-ZX16-01_ADD.asm  TC-ZX16-01_ADD.expected  TC-ZX16-01_ADD.output  TC-ZX16-01_AND.asm  TC-ZX16-01_AND.expected  TC-ZX16-02_SUB.actual  TC-ZX16-02_SUB.asm  TC-ZX16-02_SUB.expected  TC-ZX16-03_AND.actual  TC-ZX16-03_AND.asm  TC-ZX16-03_AND.expected  TC-ZX16-04_ADDI.actual  TC-ZX16-04_ADDI.expected  TC-ZX16-05_SLTI.actual  TC-ZX16-05_SLTI.asm  TC-ZX16-05_SLTI.expected  TC-ZX16-06_SLLI.actual  TC-ZX16-06_SLLI.expected  TC-ZX16-07_LI.actual  TC-ZX16-07_LI.expected  TC-ZX16-08_BNE_Taken.actual  TC-ZX16-08_BNE_Taken.asm  TC-ZX16-08_BNE_Taken.expected  TC-ZX16-09_BNE_NotTaken.actual  TC-ZX16-09_BNE_NotTaken.expected  TC-ZX16-10_BZ_Taken.actual  TC-ZX16-10_BZ_Taken.expected  TC-ZX16-11_BLT_SignedTaken.actual  TC-ZX16-11_BLT_SignedTaken.expected  TC-ZX16-12_BGEU_UnsignedTaken.actual  TC-ZX16-12_BGEU_UnsignedTaken.expected  TC-ZX16-13_BLTU_UnsignedNotTaken.actual  TC-ZX16-13_BLTU_UnsignedNotTaken.asm  TC-ZX16-13_BLTU_UnsignedNotTaken.expected  TC-ZX16-14_SB.actual  TC-ZX16-14_SB.expected  TC-ZX16-15_SW.actual  TC-ZX16-15_SW.asm  (+5 more)
backend/: app.py  z16sim  z16sim.cpp  z16sim.h
frontend/public/: App.css  Simulate.css  index.html  simulate.html
frontend/src/: App.css  App.js
offline_testcase_results/: Results
tests_new/: Graphics_01.asm  ex-2.s  graphics_test.s
tests_new/assembly/: TC-ZX16-01_ADD.asm  TC-ZX16-02_SUB.asm  TC-ZX16-04_ADDI.asm  TC-ZX16-06_SLLI.asm  TC-ZX16-07_LI.asm  TC-ZX16-09_BNE_NotTaken.asm  TC-ZX16-10_BZ_Taken.asm  TC-ZX16-11_BLT_SignedTaken.asm  TC-ZX16-12_BGEU_UnsignedTaken.asm  TC-ZX16-14_SB.asm  TC-ZX16-17_LB_PosSigned.asm
z16_assembler/: README.md
z16_assembler/assembler/: zx16asm.spec
